apps/plan-10wk/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plan-10wk
  namespace: plan-10wk
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/10wk_plan:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
